--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -1,7 +1,9 @@
-<div class="container">
-    <div class="d-flex bg-dark justify-content-center">
+   <div class="container">
+    <div class="d-flex justify-content-center">
         <div class="form-group">
         <form>
+            <h2>Enter Your Credentials And Get Chatting!</h2>
+            <br>
             <label>Email: </label>
             <input type="text" class="form-control" placeholder="Enter Email:" [(ngModel)]="email" name="email">
             <label>Password: </label>
