--- a/chat/src/app/add-user/add-user.component.html
+++ b/chat/src/app/add-user/add-user.component.html
@@ -1,20 +1,19 @@
 <div *ngIf="isSuper; else elseBlock">
     <div class="container">
-        <div class="bg-dark  flex-wrap align-content-center ">
+        <div class="bg-light  flex-wrap align-content-right ">
             <div class="form-group">
                 <h2>Create A New User</h2>
                 <form>
-                    <label>Email: </label>
-                    <input type="text"  class="form-control" placeholder="Enter new Email:" [(ngModel)]="email" name="email">
-                    <label>Password: </label>
-                    <input type="text"   class="form-control" placeholder="Enter new Password:" [(ngModel)]="pwd" name="pwd">
                     <label>Username: </label>
-                    <input type="text"  class="form-control" placeholder="Enter new Username:" [(ngModel)]="username" name="username">
+                    <input type="text"  class="form-control" placeholder="Enter a new username" [(ngModel)]="username" name="username">
+                    <label>Password: </label>
+                    <input type="text"   class="form-control" placeholder="Enter a secure password" [(ngModel)]="pwd" name="pwd" >
                 </form>
                 <br>
-                <button (click)="AddUser()" class="btn btn-primary">Submit</button>
+                <button (click)="createUser(username, pwd)" class="btn btn-primary">Create A New User!</button>
             </div>
         </div>
     </div>
+
 </div>
-<ng-template #elseBlock>You're not a super admin -> log out and sign is as a super admin to add a new user</ng-template>
+<ng-template #elseBlock>Woahhhh there - You have to be a SuperAdmin with Super powers to do this. I think you better leave :P</ng-template>
