--- a/chat/src/app/app.component.html
+++ b/chat/src/app/app.component.html
@@ -1,21 +1,21 @@
-<div id="navbar">
-    <nav class="navbar navbar-expand-lg bg-info navbar-dark">
+<div id="HomepageNavbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li class="active"><a class="nav-link" routerLink="/">Go Home</a></li>
-            <li><a class="nav-link" routerLink="/register">Register</a></li>
-            <li><a class="nav-link" routerLink="/accounts">Accounts</a></li>
-        </ul>
-     <button (click)="LogOut()" class="btn btn-primary">Log out</button>
+     <ul class="nav navbar-nav">
+     <li class="active"><a class="nav-link" routerLink="/">Chat</a></li>
+     <li><a class="nav-link" routerLink="/accountSettings">Account Settings</a></li>
+     <li ><a class="nav-link" routerLink="/newUser">Add A New User</a></li>
+     <li><a class="nav-link" routerLink="/accounts">View Accounts</a></li>
+     </ul>
+     <button (click)="LogOut()" class="btn btn-primary">Log Out</button>
      </div>
-     
     </nav>
-    
-</div>
-<div class="text-white bg-dark container-fluid">
-    <h4 id="Message bg-dark align-center">This is {{title}}</h4>
-</div>
-
-<div class="container">
+   </div>
+   <div class="bg-light  align-content-center ">
+   <br>
+   <br>
+    </div>
+    <div class="container">
     <router-outlet></router-outlet>
-</div>
+    </div>
+   
