small naming change

--- a/chat/src/app/chat/chat.component.html
+++ b/chat/src/app/chat/chat.component.html
@@ -50,7 +50,7 @@
   <form>
     <div class="input-group mb-3">
       <input type="text" [(ngModel)]="createNewChannelName" name="createNewChannelName" id="createNewChannelName" class="form-control">
-        <button class="btn btn-primary" (click)="createChannel(createNewChannelName)" type="button">New Channel</button>
+        <button class="btn btn-primary" (click)="createChannel(createNewChannelName)" type="button">Create a New Channel</button>
     </div>
   </form>
   <form>
